--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,5 +1,5 @@
 scrape_configs:
-  - job_name: 'myapp'
+  - job_name: 'aplikacija'
     scrape_interval: 10s
     static_configs:
       - targets: ['app:8000']
