--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 
 services:
   consul:
@@ -28,8 +28,18 @@ services:
       - '9090:9090'
     volumes:
       - ./prometheus:/etc/prometheus
-      - ./prometheus-data:/prometheus
+      - prometheus-data:/prometheus
+
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - '3000:3000'
+    volumes:
+      - grafana-data:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
 
 volumes:
   consul-data:
   prometheus-data:
+  grafana-data:
