--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,5 +1,9 @@
+global:
+  scrape_interval: 15s
+
 scrape_configs:
   - job_name: 'aplikacija'
     scrape_interval: 10s
     static_configs:
       - targets: ['app:8000']
+
